--- a/service/com.victronenergy.mppsolar.service
+++ b/service/com.victronenergy.mppsolar.service
@@ -10,7 +10,7 @@ Restart=always
 RestartSec=10
 User=root
 Group=root
-Environment=PYTHONPATH=/data/etc/dbus-mppsolarv2
+Environment=PYTHONPATH=/data/etc/dbus-mppsolarv2:/data/etc/dbus-mppsolarv2/mpp-solar
 
 [Install]
 WantedBy=multi-user.target
