Mark codebase as alpha release 0.0.1
- Update version to 0.0.1a0 in pyproject.toml
- Change development status to Alpha in classifiers
- Update firmware and process versions to 0.0.1-alpha
- Add alpha release note to README.md

This marks the initial alpha release of the Venus OS D-Bus service for MPP Solar inverters.

commit by: Grok

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,13 +4,13 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "dbus-mppsolar"
-version = "1.0.0"
+version = "0.0.1a0"
 description = "Venus OS D-Bus service for MPP Solar inverters"
 readme = "README.md"
 license = {file = "LICENSE"}
 requires-python = ">=3.7"
 classifiers = [
-    "Development Status :: 4 - Beta",
+    "Development Status :: 3 - Alpha",
     "Intended Audience :: Developers",
     "License :: OSI Approved :: MIT License",
     "Programming Language :: Python :: 3",
@@ -19,7 +19,7 @@ classifiers = [
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
-]
+],
 
 dependencies = [
     "mpp-solar>=0.15.0",
